--- a/templates/front/subject/list.html.twig
+++ b/templates/front/subject/list.html.twig
@@ -28,7 +28,7 @@
                                     </p>
                                 </div>
                                 <span class="badge bg-secondary rounded-pill">
-                                    {{ subject.commentaires|length }} Réponse(s)
+                                    {{ subject.comments|length }} Réponse(s)
                                 </span>
                             </a>
                         {% endfor %}
