--- a/templates/back/prospect/new.html.twig
+++ b/templates/back/prospect/new.html.twig
@@ -3,12 +3,37 @@
 {% block title %}Ajouter un Prospect{% endblock %}
 
 {% block content %}
-
 <h1>Ajouter un Prospect</h1>
+
 {{ form_start(form) }}
-{{ form_widget(form) }}
-<button type="submit" class="btn btn-primary">Enregistrer</button>
+
+    <div class="form-group">
+        {{ form_label(form.email) }}
+        {{ form_widget(form.email) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(form.services) }}
+        {{ form_widget(form.services) }}
+    </div>
+
+    <div class="form-group">
+        {{ form_label(form.document) }}
+        <div class="custom-file">
+            {{ form_widget(form.document, { 'attr': {'class': 'custom-file-input'} }) }}
+            <label class="custom-file-label" for="{{ form.document.vars.id }}">Choisir des fichiers</label>
+        </div>
+    </div>
+
+    <div class="form-group">
+        {{ form_label(form.notes) }}
+        {{ form_widget(form.notes) }}
+    </div>
+
+    <button type="submit" class="btn btn-primary">Enregistrer</button>
+
 {{ form_end(form) }}
 
-<a href="{{ path('back_prospect_index') }}">Retour</a>
+<a href="{{ path('back_prospect_index') }}" class="btn btn-secondary mt-3">Retour</a>
+
 {% endblock %}
