--- a/templates/back/prospect/welcome_prospect.html.twig
+++ b/templates/back/prospect/welcome_prospect.html.twig
@@ -8,9 +8,9 @@
             line-height: 1.6;
         }
         .button {
-            background-color: #4CAF50; /* Green */
+            background-color: #0056b3; /* Green */
             border: none;
-            color: white;
+            color: white!important;
             padding: 15px 32px;
             text-align: center;
             text-decoration: none;
@@ -28,12 +28,12 @@
 
     <p>Découvrez comment nous pouvons vous aider à développer votre projet :</p>
 
-    <ul>
+    <ol style="list-style-type: circle;">
         <li><a href="https://scriptzenit.fr/">Notre plateforme</a></li>
         <li><a href="https://scriptzenit.fr/realisations">Nos réalisations</a></li>
         <li><a href="https://scriptzenit.fr/equipe">Notre équipe</a></li>
         <li><a href="https://scriptzenit.fr/devis-en-ligne" class="button">Demander un devis</a></li>
-    </ul>
+    </ol>
 
     <p>Nous proposons des solutions complètes, de la conception à l'hébergement, en passant par le développement. Notre objectif est de vous accompagner dans la réussite de votre projet numérique.</p>
 
